# COBRA_COMMANDER

./: .gitignore  CLAUDE.md  CONSOLE_UI_IMPLEMENTATION.md  CONSOLE_UI_PLAN.md  Cargo.toml  POSITIONER_TOUCHOSC_BURNDOWN.md  README.md  RGBW_BRIGHTNESS.md  build.rs  dynamic-config-refactoring-plan.md  run  step5-dynamic-dmx-port-plan.md
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: release.yml  rust.yml
cfg/: club_blu_2024.yaml  downstage_2025.yaml  robot_heart.yaml  test.yaml
docs/: gui-framework-selection.md  slint-config-gui-plan.md
examples/: color_space_comparison.rs
fixture_macros/src/: lib.rs
lumitone/: Cargo.toml
lumitone/src/: main.rs
macos/: Info.plist
patch/: bellhop_2025.yaml  bellhop_afterparty.yaml  bellhop_left_2025.yaml  bellhop_right_2025.yaml  chillits_2025.yaml  club_blu.yaml  endzeit_oct_2025.yaml  idp_10_years.yaml  priceless_2025.yaml  seed_barn_oct_2025.yaml  test.yaml  uncle_bucks_dog_and_pony_show_lounge.yaml
resources/: generate_icons.py
scripts/: build-app.sh  build-release.sh  bundle-macos.sh  create-dmg.sh  generate-icon.sh
src/: animation.rs  animation_service.rs  animation_visualizer.rs  channel.rs  cli.rs  clock_service.rs  clocks.rs  color.rs  config.rs  control.rs  dmx.rs  gui.rs  gui_state.rs  lib.rs  local_ip_watch.rs  main.rs  master.rs  positioner.rs  preview.rs  show.rs  show_file.rs  show_saver.rs  shutdown.rs  strobe.rs  ui_util.rs  util.rs  visualizer.rs  wled.rs  worker.rs
src/config_gui/: animation_panel.rs  audio_panel.rs  clock_panel.rs  dmx_debug_panel.rs  dmx_panel.rs  midi_panel.rs  mod.rs  osc_panel.rs  patch_panel.rs  positioner_panel.rs  welcome.rs
src/console/: app.rs  command.rs  mod.rs  state.rs
src/fixture/: animation_target.rs  fixture.rs  generic.rs  group.rs  mod.rs  patch.rs  radiance.rs
src/gui/: mod.rs
src/midi/: mapping.rs  mod.rs  slots.rs
src/osc/: animation.rs  audio.rs  basic_controls.rs  bipolar_array.rs  button_array.rs  channels.rs  clock.rs  control_message.rs  label_array.rs  listener.rs  mod.rs  positioner.rs  radio_button.rs  register.rs  sender.rs  unipolar_array.rs
src/touchosc/: CLAUDE.md  clock_grid.rs  extract.rs  generate.rs  mod.rs  model.rs  parse.rs  regroup.rs  serialize.rs  serve.rs  templates.rs  tests.rs
touchosc/: aa_march_2024.touchosc  base.touchosc  bellhop_2025.touchosc  chillits_2025.touchosc  club_blu_2024.touchosc  corner_test.touchosc  downstage_2025.touchosc  endzeit_oct_2025.touchosc  fixtures.touchosc  idp_10_years.touchosc  master.touchosc  priceless_2025.touchosc  robot_heart.touchosc
touchosc/group_templates/: Abyss2.touchosc  Aquarius.touchosc  Astera.touchosc  Atlas.touchosc  (+35 more)
ui/: config_panel.slint  visualizer.slint
(+76 files in other folders)
