[package]
name = "cobra_commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
log = "0.4"
simplelog = "0.12"
rosc = "0.11"
rust_dmx = "0.6"
serde_yaml = "0.9"
local-ip-address = "0.6"
number = { git = "https://github.com/generalelectrix/number", branch = "main" }
strum = "0.27"
strum_macros = "0.27"
tunnels = { git = "https://github.com/generalelectrix/tunnels", branch = "main" }
tunnels_lib = { git = "https://github.com/generalelectrix/tunnels", branch = "main" }
zero_configure = { git = "https://github.com/generalelectrix/tunnels", branch = "main" }
color_organ = { git = "https://github.com/generalelectrix/color_organ", branch = "main" }

zmq = "0.10"
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "2"
num-traits = "0.2"
itertools = "0.14"
fixture_macros = { path = "fixture_macros" }
rand = { version = "0.9", features = ["small_rng"] }
wled-json-api-library = "0.1.7"
reqwest = "0.12"
linkme = "0.3"
hsluv = "0.3"
clap = { version = "4", features = ["derive"] }
num-derive = "0.4"
ordered-float = "5"
ordermap = "1"
ansi-escapes = "0.2.0"
egui_plot = "0.33.0"
eframe = "0.32.3"
enum_dispatch = "0.3.13"
url = { version = "*", features = ["serde"] }
termion = "4.0.5"
owo-colors = "4.2.3"

# [patch.'https://github.com/generalelectrix/tunnels']
# tunnels = { path = "../tunnels/tunnels" }
# tunnels_lib = { path = "../tunnels/tunnels_lib" }
# zero_configure = { path = "../tunnels/zero_configure" }
